--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -2,30 +2,10 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +15,73 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+body {
+  margin: 0;
+  font-family: 'Scheherazade New', serif;
+  color: white;
+  background: #7e8185;
+  overflow-x: hidden;
+}
+
+section {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 400px;
+  padding: 100px 20vw;
+}
+
+.black {
+  background: #12130f;
+}
+
+.headerWave {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+
+.headerWave svg {
+  position: relative;
+  display: block;
+  width: calc(135% + 1.3px);
+  height: 130px;
+}
+
+.headerWave .shape-fill {
+  fill: #12130F;
+}
+
+.blue {
+  background: #1789FC;
+}
+
+.spanishBlue {
+  background: #296EB4;
+}
+
+.russianGreen {
+  background: #519872;
+}
+
+.emerald {
+  background: #5B9279;
+}
+
+.honeyYellow {
+  background: #FDB833;
+}
+
+.yellowCrayola {
+  background: #FFD07B;
+}
+
+.gold {
+  background: #B1740F;
 }
