--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -34,6 +34,8 @@ section {
   padding: 100px 20vw;
 }
 
+/* Header Section */
+
 .black {
   background: #12130f;
 }
@@ -57,6 +59,22 @@ section {
 .headerWave .shape-fill {
   fill: #12130F;
 }
+
+.photoWrap {
+  position: relative;
+  max-width: 10vw;
+}
+
+.photoWrap img {
+  height: 100%;
+  width: 100%;
+  border: 4px solid white;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+}
+
+/* Techonologies section */
 
 .blue {
   background: #1789FC;
