--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -95,7 +95,7 @@ section {
 .photoWrap img {
   height: 100%;
   width: 100%;
-  border: 4px solid white;
+  border: 4px solid #724E91;
   border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -175,6 +175,14 @@ section {
   perspective: 1000px;
 }
 
+.flip-card img {
+  background-color: transparent;
+  width: 225px;
+  height: 225px;
+  border: 1px solid #f1f1f1;
+  perspective: 1000px;
+}
+
 .flip-card-inner {
   position: relative;
   width: 100%;
@@ -198,7 +206,7 @@ section {
 }
 
 .flip-card-front {
-  background-color: #bbb;
+  background-color: black;
   color: black;
 }
 
