--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -58,7 +58,6 @@ li img {
   -o-transition: all .3s ease-in;
   -webkit-transition: all .3s ease-in;
   transition: all .3s ease-in;
-  transform: scale(1.02);
 }
 
 .active>.nav-item {
@@ -68,7 +67,6 @@ li img {
   -o-transition: all .3s ease-in;
   -webkit-transition: all .3s ease-in;
   transition: all .3s ease-in;
-  transform: scale(1.05);
 }
 
 .link-text {
@@ -265,10 +263,51 @@ section .contact {
   background: #121417;
 }
 
+.about p {
+  font-size: 1.6rem;
+}
+
 /* Projects Section */
 
 .projects {
   background: #121417;
+}
+
+.image-container {
+  position: relative;
+}
+
+.image-caption {
+  width: 100%;
+  height: 100%;
+  background: rgb(18, 20, 23, 0.5);
+  position: absolute;
+  bottom: 0;
+  opacity: 0;
+  transition: all 300ms ease-in-out;
+  -webkit-transition: all 300ms ease-in-out;
+  -moz-transition: all 300ms ease-in-out;
+  -o-transition: all 300ms ease-in-out;
+  -ms-transition: all 300ms ease-in-out;
+}
+
+.image-caption img {
+  width: 3rem;
+  height: auto;
+}
+
+.image-caption a {
+  background: #9B59B6;
+  border-radius: 10%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%)
+}
+
+.image-container:hover .image-caption {
+  opacity: 1;
 }
 
 .projectImgWrapper {
@@ -512,6 +551,7 @@ a {
 }
 
 /* Animations */
+
 .stackText {
   color: #9B59B6;
 }
@@ -531,12 +571,20 @@ a {
 }
 
 @keyframes blink {
-  0% {opacity: 1;}
-  40% {opacity: 1;}
-  60% {opacity: 0;}
-  100% {opacity: 0;}
+  0% {
+    opacity: 1;
+  }
+  40% {
+    opacity: 1;
+  }
+  60% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
-.input-cursor { 
-animation: blink .6s linear infinite alternate;
+.input-cursor {
+  animation: blink .6s linear infinite alternate;
 }
